# tp_C-2A

./: .gitignore
tp1/CPPMA-Spring2026-Lab1/: trace.cxx
tp2/: CMakeLists.txt
tp2/doc/: tp_test_algo.txt
tp2/include/: Particule.hpp  vecteur.hpp
tp2/src/: Particule.cxx  main.cxx  vecteur.cxx
tp3/cppma-spring2025-lab3-infra(1)/Lab3-Infra/: CMakeLists.txt
tp3/cppma-spring2025-lab3-infra(1)/Lab3-Infra/doc/: res.txt
tp3/cppma-spring2025-lab3-infra(1)/Lab3-Infra/include/: Particule.hpp  Univers.hpp  Vecteur.hpp
tp3/cppma-spring2025-lab3-infra(1)/Lab3-Infra/src/: CMakeLists.txt  Particule.cxx  Univers.cxx  Vecteur.cxx  main.cxx
tp3/cppma-spring2025-lab3-infra(1)/Lab3-Infra/test/: test_point.cxx
tp4/include/: Cellule.hpp  Particule.hpp  Univers.hpp  Vecteur.hpp
tp4/src/: Cellule.cxx  Particule.cxx  Vecteur.cxx
tp4/tests/: test_Vecteur.cxx
